# virto-app

./: Cargo.toml  index.html
public/: app.css  login.css
src/: lib.rs  main.rs
src/components/atoms/: button.rs  community.rs  header.rs  mod.rs  room.rs
src/components/atoms/icons/: arrow_down_circle.rs  arrow_up_circle.rs  exit.rs  mod.rs
src/components/molecules/: menu.rs  rooms.rs
src/components/organisms/: login_form.rs
src/components/organisms/chat/: active_room.rs  mod.rs  preview_room.rs  public_rooms.rs
src/hooks/: use_auth.rs  use_init_app.rs  use_listen_invitation.rs  use_listen_message.rs  use_public.rs  use_room_preview.rs  use_rooms.rs  use_session.rs
src/locales/: en-US.json  es-ES.json
src/pages/: login.rs  signup.rs  welcome.rs
src/pages/chat/: chat.rs  chat_list.rs
src/services/: matrix.rs
